[package]
name = "rustful"
version = "0.9.0" #automatically updated
authors = ["Erik Hedvall <hello@erikhedvall.nu>"]
exclude = ["scripts/*", "examples/*", ".travis.yml", "appveyor.yml", ".gitignore", "CHANGELOG.md", "version.sh"]
description = "A light HTTP framework, with some REST-like features and the ambition of being simple, modular and non-intrusive."
documentation = "http://ogeon.github.io/docs/rustful/master/rustful/index.html"
repository = "https://github.com/Ogeon/rustful"
readme = "README.md"
keywords = ["web", "rest", "framework", "http", "routing"]
license = "MIT OR Apache-2.0"
build = "build/main.rs"

[lib]
name = "rustful"
path = "src/lib.rs"

[features]
default = ["multipart"]

#internal
benchmark = []
strict = []

[dependencies]
time = "0.1"
url = "1"
anymap = "0.12"
phf = "0.7"
num_cpus = "1"
log = "0.4"

[dependencies.hyper]
version = "0.10"

[dependencies.multipart]
#feature
version = "0.14"
default-features = false
features = ["server"]
optional = true

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
unicase = "1.4"
mime = "0.3"
env_logger = "0.5"

[build-dependencies]
phf_codegen = "0.7"
